--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-parallax": "^3.5.1",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "react-youtube": "^10.1.0",
+    "sweetalert2": "^11.7.22",
+    "sweetalert2-react-content": "^5.0.7",
+    "swiper": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
